--- a/button-counter/src/index.css
+++ b/button-counter/src/index.css
@@ -5,3 +5,13 @@ body {
   font-family: sans-serif;
   box-sizing: border-box;
 }
+
+button {
+  border: none;
+  cursor: pointer;
+}
+
+ul {
+  display: inline;
+  list-style: none;
+}
