--- a/soeun-react/src/functions/todoList.scss
+++ b/soeun-react/src/functions/todoList.scss
@@ -79,7 +79,7 @@ h2{
   color: #7D7878;
 
 font-family: Raleway;
-font-size: 2rem;
+font-size: 2grem;
 font-style: normal;
 font-weight: 400;
 line-height: normal
