DESIGN : 글로벌 css 추가

--- a/src/scss/global.module.scss
+++ b/src/scss/global.module.scss
@@ -1,18 +1,19 @@
 * {
-    margin:0;
-    padding:0;
+  margin: 0;
+  padding: 0;
 }
 img {
-    vertical-align:top;
+  vertical-align: top;
 }
 body {
-    line-height:1;
-  
+  line-height: 1;
 }
-ul,ol,li {
-    list-style:none;
+ul,
+ol,
+li {
+  list-style: none;
 }
 a {
-    text-decoration:none;
+  text-decoration: none;
+  cursor: pointer;
 }
-
