--- a/src/scss/Drag.module.scss
+++ b/src/scss/Drag.module.scss
@@ -7,12 +7,20 @@
 
 .main {
   width: 500px;
+  height: 200px;
   display: flex;
   justify-content: space-between;
 }
 
 .left-container {
   width: 200px;
+}
+
+.reset {
+  width: 40px;
+  height: 20px;
+  border: 1px solid #555;
+  cursor: pointer;
 }
 
 .right-container {
